@@ -18,6 +18,7 @@ NEWS
   * [core] improve conditional enabling (thx Gwenlliana, #2598)
   * [mod_compress] case-insensitive content-codings (fixes #2645)
   * [plugins] don't include dlfcn.h if not needed (fixes #2548)
+  * [mod_fastcgi] 404 for X-Sendfile file not found (fixes #2474)
 
 - 1.4.39 - 2016-01-02
   * [core] fix memset_s call (fixes #2698)
